--- a/css/style.css
+++ b/css/style.css
@@ -1080,7 +1080,18 @@
 	    display: block;
 	    margin: 1em 0 0 0;
 	}
-	
+
+	.soundcloud {
+	    position: relative;
+	    width: 100%;
+	    padding: 0 2em 0 2em;
+	}
+
+	.soundcloud iframe {
+	    width: 100% !important;
+	    height: 100% !important;
+	}
+
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
