--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -343,6 +343,7 @@
 		padding-left: 1em;
 		padding-right: 1em;
 	}
+
 	
 /*********************************************************************************/
 /* Carousel                                                                      */
@@ -369,3 +370,12 @@
 			{
 				margin-bottom: 2em;
 			}
+
+/*********************************************************************************/
+/* Media                                                                         */
+/*********************************************************************************/
+
+	.niconico embed {
+	    width: 100% !important;
+	    height: 100% !important;
+	}
