add iframewrap class

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -375,7 +375,6 @@
 /* Media                                                                         */
 /*********************************************************************************/
 
-	.niconico embed {
-	    width: 100% !important;
+	.iframewrap iframe {
 	    height: 100% !important;
 	}
