--- a/css/style.css
+++ b/css/style.css
@@ -1103,6 +1103,10 @@
 	    margin-left: 15px;
 	}
 
+	.imagewrap {
+	    max-width: 100% !important;
+	    max-height: 100% !important;
+	}
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
