remove `Noto sans japanese` for speed

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @charset 'UTF-8';
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600');
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 @import url('font-awesome.min.css');
 
 /*
@@ -37,7 +36,7 @@
 	{
 		font-size: 15pt;
 		line-height: 1.85em;
-		font-family: 'Noto Sans Japanese', 'Source Sans Pro', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
 	}
 
